--- a/build.gradle
+++ b/build.gradle
@@ -26,6 +26,7 @@ dependencies {
     modApi("me.shedaniel.cloth:cloth-config-fabric:${project.cloth_config_api_version}") {
         exclude(group: "net.fabricmc.fabric-api")
     }
+    modApi "com.terraformersmc:modmenu:${project.modmenu_version}"
 }
 
 processResources {
