--- a/gradle.properties
+++ b/gradle.properties
@@ -12,4 +12,5 @@ archives_base_name=meow
 # Dependencies
 # check this on https://modmuss50.me/fabric.html
 fabric_version=0.128.1+1.21.5
-cloth_config_api_version = 18.0.145
+cloth_config_api_version=18.0.145
+modmenu_version=14.0.0-rc.2
