--- a/.github/workflows/gradle-publish.yml
+++ b/.github/workflows/gradle-publish.yml
@@ -41,5 +41,5 @@ jobs:
     - name: Download artifact
       uses: actions/download-artifact@v4
       with:
-        name: build-output
+        name: *
         path: ./build/libs
