--- a/.github/workflows/gradle-publish.yml
+++ b/.github/workflows/gradle-publish.yml
@@ -41,5 +41,5 @@ jobs:
     - name: Download artifact
       uses: actions/download-artifact@v4
       with:
-        name: meow-1.0-1.21.5.jar
-        path: ./build/libs
+        name: jars
+        path: ./build/libs/
