--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -38,8 +38,8 @@ jobs:
 
     # The USERNAME and TOKEN need to correspond to the credentials environment variables used in
     # the publishing section of your build.gradle
-    - name: Download artifact
-      uses: actions/download-artifact@v4
+    - name: upload artifact
+      uses: actions/upload-artifact@v4
       with:
         name: meow-1.0-1.21.5.jar
         path: ./build/libs/
